--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -1,6 +1,6 @@
 <!--
     
-    Ici il faut afficher les activites
+    Ici il faut afficher les promotions
 
 -->
 {% extends "layout.html.twig" %}
@@ -19,7 +19,7 @@
             <div class="col-xs-12">
               <div class="box box-warning">
                 <div class="box-header">
-                  <h3 class="box-title">Voici les differentes Promotions</h3>
+                  <h3 class="box-title">Voici les différentes promotions:</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <table id="example1" class="table table-bordered table-striped">
