--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -1,55 +1,1 @@
-<!--
-    
-    Ici il faut afficher les promotions
-
--->
-{% extends "layout.html.twig" %}
-
-{% block content %}
-<section class="content-header">
-    <h1>
-        Promotions
-        <small>liste</small>
-    </h1>
-        </section>
-
-        <!-- Main content -->
-        <section class="content">
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="box box-warning">
-                <div class="box-header">
-                  <h3 class="box-title">Voici les différentes promotions:</h3>
-                </div><!-- /.box-header -->
-                <div class="box-body">
-                  <table id="example1" class="table table-bordered table-striped">
-                    <thead>
-                      <tr>
-                        <th>Numero</th>
-                        <th>Annee</th>
-                        <th>Libelle</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        {% for promotion in promotions %}
-                          <tr>
-                            <th>{{ activite._id }}</th>
-                            <th>{{ activite._annee }}</th>
-                            <th>{{ activite._libelle }}</th>
-                          </tr>
-                        {% endfor %}
-                    </tbody>
-                    <tfoot>
-                      <tr>
-                        <th>Numero</th>
-                        <th>Annee</th>
-                        <th>Libelle</th>
-                      </tr>
-                    </tfoot>
-                  </table>
-                </div><!-- /.box-body -->
-              </div><!-- /.box -->
-            </div><!-- /.col -->
-          </div><!-- /.row -->
-        </section><!-- /.content -->
-{% endblock %}
+{# empty Twig template #}
