--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -32,7 +32,7 @@
   </head>
   <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-    {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
+    {% if app.user %}
       <header class="main-header">
 
         <!-- Logo -->
