--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -32,7 +32,7 @@
   </head>
   <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-    {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
+    {# {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %} #}
       <header class="main-header">
 
         <!-- Logo -->
@@ -50,7 +50,7 @@
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               <li>
-              <a href="{{ path('logout') }}" class="dropdown">
+              {# <a href="{{ path('logout') }}" class="dropdown"> #}
                 <i class="fa fa-power-off"></i>
               </a>
              </li>
