--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -124,7 +124,7 @@
         </section>
         <!-- /.sidebar -->
       </aside>
-      {% endif %}
+      {# {% endif %} #}
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
         <!-- Content Header (Page header) -->
