--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -50,7 +50,7 @@
             <ul class="nav navbar-nav">
             
               <li>
-              {% if app.user and is_granted() %}
+              {% if app.user and is_granted('ROLE_USER') %}
                 <a href="{{ path('logout') }}" class="dropdown">
               {% else %}
                 <a href="{{ path('login') }}" class="dropdown">
