Modify Layout Eleves --> Activites

--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -70,11 +70,11 @@
             <li class="header">MENU</li>
             <li class="active treeview">
               <a href="#">
-                <i class="fa fa-group"></i> <span>Clients</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-group"></i> <span>Éleves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li class="active"><a href="./clientsvue.php"><i class="fa fa-eye"></i> Voir</a></li>
-                <li><a href="./clientsadd.php"><i class="fa fa-plus-square-o"></i> Ajouter</a></li>
+                <li class="active"><a href="./activitesvue.php"><i class="fa fa-eye"></i> Activés</a></li>
+                <li><a href="./activitesAdmin.php"><i class="fa fa-plus-square-o"></i> Compétences</a></li>
 		<!--<li><a href="./clientssup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
               </ul>
             </li>
