--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -70,7 +70,7 @@
             <li class="header">MENU</li>
             {# TODO : condition eleve #}
             <li class="active treeview">
-              <a href="{{ path('/activite') }}">
+              <a href="{{ path('activite') }}">
                 <i class="fa fa-group"></i> <span>Activités</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
