Modif Layout.html.twig  + controller + UtilisateurDAO

--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -70,27 +70,37 @@
             <li class="header">MENU</li>
             <li class="active treeview">
               <a href="#">
-                <i class="fa fa-group"></i> <span>Éleves</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-group"></i> <span>Activites</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li class="active"><a href="./activitesvue.php"><i class="fa fa-eye"></i> Activés</a></li>
-                <li><a href="./activitesAdmin.php"><i class="fa fa-plus-square-o"></i> Compétences</a></li>
+                <li class="active"><a href="{{ activite.html.twig }}">{{ activite }}</a></li>
+                <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
 		<!--<li><a href="./clientssup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
               </ul>
             </li>
             <li class="treeview">
               <a href="#">
-                  <i class="fa fa-usd"></i> <span>Achats</span> <i class="fa fa-angle-left pull-right"></i>
+                  <i class="fa fa-usd"></i> <span>Competences</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li><a href="../achats/achatsvue.php"><i class="fa fa-eye"></i> Voir</a></li>
+                <li><a href="{{ competence.html.twig }}">{{ /competence }}</a></li>
                 <li><a href="../achats/achatsadd.php"><i class="fa fa-plus-square-o"></i> Ajouter</a></li>
 		<!--<li><a href="../achats/achatssup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
               </ul>
             </li>
-            <li class="treeview">
+            {% if is_granted('ROLE_PROF') %}
+              <li class="treeview">
+                <a href="#">
+                  <i class="fa fa-trademark"></i> <span>Promotions</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                  <li><a href="{{ promotion.html.twig }}">{{ /promotion }}</a></li>
+                  <li><a href="../marques/marquesadd.php"><i class="fa fa-plus-square-o"></i> Ajouter</a></li>
+                  <!--<li><a href="../marques/marquessup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
+                </ul>
+              </li><li class="treeview">
               <a href="#">
-                <i class="fa fa-copyright"></i> <span>Produits</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-copyright"></i> <span>Eleves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
                 <li><a href="../produits/produitsvue.php"><i class="fa fa-eye"></i> Voir</a></li>
@@ -98,19 +108,10 @@
 		<!--<li><a href="../produits/produitssup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
               </ul>
             </li>
+              {% elseif is_granded('ROLE_ADMIN') %}
             <li class="treeview">
               <a href="#">
-                <i class="fa fa-trademark"></i> <span>Marques</span> <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../marques/marquesvue.php"><i class="fa fa-eye"></i> Voir</a></li>
-                <li><a href="../marques/marquesadd.php"><i class="fa fa-plus-square-o"></i> Ajouter</a></li>
-		<!--<li><a href="../marques/marquessup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-calendar"></i> <span>Rendez Vous</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-calendar"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
                 <li><a href="../rdv/rdvvue.php"><i class="fa fa-eye"></i> Voir</a></li>
@@ -118,6 +119,7 @@
 		<!--<li><a href="../rdv/rdvsup.php"><i class="fa fa-minus-square-o"></i> Supprimer</a></li>-->
               </ul>
             </li>
+             {% endif %}
             <li class="treeview">
               <a href="#">
                 <i class="fa fa-signal"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
